--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,18 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing csv file\n",
     "\n",
-    "df = pd.read_csv(\"UCI_Credit_Card.csv\")"
+    "df = pd.read_csv(r\"E:\\Project_main\\Credit_Card_Default_Prediction\\notebooks\\data\\UCI_Credit_Card.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "4                           0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "max        2.000000      6.000000      3.000000"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "max        8.000000  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "max    927171.000000  961664.000000  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "max    426529.000000  528666.000000  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
        "4                           0  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
        "4        0  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
        "4        0  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
        "[]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
        "<Axes: xlabel='AGE', ylabel='Count'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2226,7 @@
        "Text(0, 0.5, 'BILL_AMT6')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2295,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -2699,7 +2699,7 @@
        "9        0  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
